force-app/main/default/objects/Execution__c/Execution__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Execution Managment</label>
</CustomObject>