force-app/main/default/objects/Execution__c/fields/Display_TriggerHandler_Details__c.field-meta.xml
<CustomField>
    <fullName>Display_TriggerHandler_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display TriggerHandler Details</label>
    <type>Checkbox</type>
</CustomField>