force-app/main/default/objects/Execution__c/fields/Skip_Named_Validation__c.field-meta.xml
<CustomField>
    <fullName>Skip_Named_Validation__c</fullName>
    <label>Skip Named Validation</label>
    <type>TextArea</type>
</CustomField>