force-app/main/default/objects/Execution__c/fields/Skip_Object_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Skip_Object_Triggers__c</fullName>
    <label>Skip Object Triggers</label>
    <type>TextArea</type>
</CustomField>