force-app/main/default/objects/Execution__c/fields/Skip_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Skip_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Triggers</label>
    <type>Checkbox</type>
</CustomField>