force-app/main/default/objects/Execution__c/fields/Skip_Validations__c.field-meta.xml
<CustomField>
    <fullName>Skip_Validations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Validations</label>
    <type>Checkbox</type>
</CustomField>